# openproject-mcp

./: .dockerignore  Dockerfile  README.md  Wishlist.txt  docker-compose.yml  prompts.yaml  pyproject.toml
config/: __init__.py  logging_config.py
mcp_client/: __init__.py  client.py
mcp_server/: openproject_server.py
openproject/: __init__.py  endpoints.py  format_utils.py
telegram_app/: bot.py  database.py  mcp_handler.py
